--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,13 @@
 {
   "name": "Rádio M3U",
-  "short_name": "Rádio",
-  "start_url": "index.html",
+  "short_name": "Rádio M3U",
+  "start_url": ".",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
+  "background_color": "#121212",
+  "theme_color": "#1DB954",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "icon.png",
-      "sizes": "192x192",
       "type": "image/png"
     }
   ]
