--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,8 @@
   "orientation": "portrait",
   "icons": [
     {
+      "src": "image/icon.png",
+      "sizes": "180x180",
       "type": "image/png"
     }
   ]
